--- a/Plotly.ipynb
+++ b/Plotly.ipynb
@@ -4,15 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets learn how the plotly library works to maybe make graphs more easily."
+    "Lets learn how the plotly library works to maybe make graphs more easily.\n",
+    "\n",
+    "Animation seems to be a lot simpler with the system able to effectively interpolate between key frames."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
